# LLM-Interface

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
src/llm_interface/: __init__.py  cli.py  exception.py  helpers.py  llm.py  llm_handler.py  llm_interface.py  model.py
src/llm_interface/llm/: __init__.py  groq.py  openai.py
src/llm_interface/model/: __init__.py  llm.py  model.py
src/llm_interface/protocol/: __init__.py  llm_representable.py
src/llm_interface/provider/: __init__.py
src/llm_interface/recorder/: __init__.py  debug_recorder.py
src/llm_interface/static/: styles.css  viewer.html
tests/: conftest.py  test_debug_recorder.py  test_helpers.py  test_live_api.py  test_llm_interface.py
