[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "llm_interface"
version = "0.1.0"
authors = [
    {name = "Willem de Beijer"},
]
description = "A simple LLM interface"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "aiohttp>=3.9.0",
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
    "pytest-asyncio>=0.23",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "mypy>=1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = ["tests"]

[project.scripts]
llm-interface = "llm_interface.cli:main"

[tool.setuptools.package-data]
llm_interface = ["static/*"]